@@ -55,6 +55,8 @@ int gretl_command_sprintf (const char *template, ...);
 
 int gretl_command_strcpy (const char *s);
 
+int gretl_command_strcat (const char *s);
+
 int *command_list_from_string (char *s);
 
 int user_fopen (const char *fname, char *fullname, PRN **pprn);
