@@ -59,6 +59,8 @@ version 1.7.5, in progress
 - OLS anova: add p-value for the F-statistic
 - Fix VECM forecast graph in GUI ("pre-forecast" fitted
   values were not integrated)
+- "open" command: add options for controlling importation
+  from spreadsheets
 
 3/21/2008 version 1.7.4
 - Fix for ADF-GLS test with missing values
